# ViewFaceCore

./: .gitignore  .gitmodules  LICENSE  README.md  README_API.md  ReBuild-Docker.bat  ReBuild-NT.bat  SeetaFace_LICENSE  View.Face.sln  ViewFace.sln  ViewFaceCore.Extensions.sln  ViewFaceCore.Models.sln  ViewFaceCore.Runtimes.sln  ViewFaceCore.sln  nuget.config
docs/seeta-face6-build/index/FaceRecognizer6/: CMakeLists.txt  README.md
docs/seeta-face6-build/index/FaceRecognizer6/FaceRecognizer/: CMakeLists.txt
docs/seeta-face6-build/index/FaceRecognizer6/FaceRecognizer/android/jni/: Android.mk
docs/seeta-face6-build/index/FaceRecognizer6/FaceRecognizer/include/seeta/: FaceDatabase.h  SeetaFaceRecognizerConfig.h.in
docs/seeta-face6-build/index/FaceRecognizer6/FaceRecognizer/seeta/: ForwardNet.h  graphics2d.h
docs/seeta-face6-build/index/FaceRecognizer6/FaceRecognizer/src/seeta/: FaceAlignment.cpp  FaceAlignment.h  FaceDatabase.cpp  FaceRecognizer.cpp  Mutex.h  transform.cpp  transform.h
docs/seeta-face6-build/index/FaceRecognizer6/cmake/: FindLibrary.cmake.in  FindSeetaFaceRecognizer.cmake
docs/seeta-face6-build/index/FaceRecognizer6/craft/: build.linux.x64.sh
docs/seeta-face6-build/index/FaceRecognizer6/example/: CMakeLists.txt  Struct_cv.h  example.cpp
docs/seeta-face6-build/index/FaceTracker6/: CMakeLists.txt  README.md
docs/seeta-face6-build/index/FaceTracker6/FaceTracking/: CMakeLists.txt
docs/seeta-face6-build/index/FaceTracker6/FaceTracking/android/jni/: Android.mk
docs/seeta-face6-build/index/FaceTracker6/FaceTracking/include/seeta/: CTrackingFaceInfo.h
docs/seeta-face6-build/index/FaceTracker6/FaceTracking/src/seeta/: FaceTracker.cpp
docs/seeta-face6-build/index/FaceTracker6/cmake/: FindSeetaFaceTracking.cmake  FindSeetaFaceTracking.cmake.in
docs/seeta-face6-build/index/FaceTracker6/craft/: build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
docs/seeta-face6-build/index/FaceTracker6/example/: CMakeLists.txt  example.cpp
docs/seeta-face6-build/index/Landmarker/Landmarker/: CMakeLists.txt
docs/seeta-face6-build/index/Landmarker/Landmarker/android/jni/: Android.mk  Application.mk
docs/seeta-face6-build/index/Landmarker/Landmarker/include/seeta/: SeetaFaceLandmarkerConfig.h.in
docs/seeta-face6-build/index/Landmarker/Landmarker/seeta/: CommonStruct.h  Struct_cv.h
docs/seeta-face6-build/index/Landmarker/Landmarker/src/seeta/: FaceLandmarker.cpp
docs/seeta-face6-build/index/OpenRoleZoo/: .gitignore  CMakeLists.txt  README.md
docs/seeta-face6-build/index/OpenRoleZoo/android/jni/: Android.mk
docs/seeta-face6-build/index/OpenRoleZoo/cmake/: FLAGS_GCC.cmake  FLAGS_MSVC.cmake
docs/seeta-face6-build/index/OpenRoleZoo/craft/: build.linux.x64.sh  build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/codec/: base64.h  json.h
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/io/: csv.h  dir.h  i.h  walker.h
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/lego/: box.h  brick.h
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/mem/: need.h  pot.h  vat.h
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/net/: http.h
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/ssl/: aes.h  rsa.h
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/sync/: backend.h  canyon.h  cartridge.h  shotgun.h
docs/seeta-face6-build/index/OpenRoleZoo/include/orz/tools/: cpp_resources.h  ctxmgr_lite.h  ctxmgr_lite_support.h  fps.h  function.h  gun_with.h  limit.h  multi.h  option.h  progress_bar.h  range.h  resources.h  timer.h  void_bind.h
docs/seeta-face6-build/index/OpenRoleZoo/python/: model2model2.py  test.json  test.py  test_aes.py  viewsta.cmd  viewsta.py
docs/seeta-face6-build/index/OpenRoleZoo/python/orz/: __init__.py  json2sta.py  sta.py  sta2json.py
docs/seeta-face6-build/index/OpenRoleZoo/src/: CMakeLists.txt
docs/seeta-face6-build/index/OpenRoleZoo/test/: aes.cpp  base64.cpp  ctxmgr_lite.cpp  dir.cpp  http.cpp  json.cpp  lego_brick.cpp  multi.cpp  option.cpp  progress_bar.cpp  range.cpp  resources.cpp  rsa.cpp
docs/seeta-face6-build/index/OpenRoleZoo/tools/: orz_resources.cpp
docs/seeta-face6-build/index/QualityAssessor3/: CMakeLists.txt  README.md
docs/seeta-face6-build/index/QualityAssessor3/QualityAssessor/: CMakeLists.txt
docs/seeta-face6-build/index/QualityAssessor3/QualityAssessor/seeta/: ImageProcess.h  common_alignment.h
docs/seeta-face6-build/index/QualityAssessor3/cmake/: FindSeetaQualityAssessor.cmake  LOCAL_ENV.cmake
docs/seeta-face6-build/index/QualityAssessor3/craft/: build.linux.x64.sh  build.win.vc14.all.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd
docs/seeta-face6-build/index/QualityAssessor3/example/: CMakeLists.txt  CVStatisticsWindow.h  Struct_cv.h  example.cpp
docs/seeta-face6-build/index/SeetaAgePredictor/example/: CMakeLists.txt  example.cpp
docs/seeta-face6-build/index/SeetaAuthorize/: CMakeLists.txt  README.md
docs/seeta-face6-build/index/SeetaAuthorize/android/jni/: Android.mk
docs/seeta-face6-build/index/SeetaAuthorize/check_it/: check_it.cpp
docs/seeta-face6-build/index/SeetaAuthorize/cmake/: FLAGS_GCC.cmake  FindSeetaAuthorize.cmake  LOCAL_ENV.cmake
docs/seeta-face6-build/index/SeetaAuthorize/craft/: build.linux.x64.sh  build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
docs/seeta-face6-build/index/SeetaAuthorize/include/: SeetaLANLock.h
docs/seeta-face6-build/index/SeetaAuthorize/include/hidden/: SeetaLockFunction.h  SeetaLockVerifyLAN.h
docs/seeta-face6-build/index/SeetaAuthorize/include/lock/: cstamodelfilestream.h  cstastream.h  error_code.h  fast_cstastream.h  fast_encryptstream.h
docs/seeta-face6-build/index/SeetaAuthorize/props/: SeetaAuthorize.props
docs/seeta-face6-build/index/SeetaAuthorize/src/: SeteaLANLock.cpp  cstamodelfilestream.cpp  cstastream.cpp  error_code.cpp  fast_cstastream.cpp  fast_encryptstream.cpp
(+1740 files in other folders)
